tests/regression/errors/import_errors.csd
// Import and module errors
yeet "nonexistent_module"

yeet "mathz"
// Using function that doesn't exist in module
sus result drip = nonexistent_function(42)

// Invalid import syntax
yeet missing_quotes

// Using function before import
sus early drip = abs_normie(-5)
yeet "mathz"
